7 days of code / Day 3 | OK

--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,9 @@
             "email": "david.meth@live.com"
         }
     ],
-    "require": {},
+    "require": {
+      "ext-mbstring": "*"
+    },
     "autoload": {
         "psr-4": {
             "Scuba\\Web\\": "src/"
