--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         }
     ],
     "require": {
-      "ext-mbstring": "*"
+      "ext-mbstring": "*",
+        "phpmailer/phpmailer": "^6.7"
     },
     "autoload": {
         "psr-4": {
